{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 45,
  "lineage": "f5390f72-9063-163c-d06c-54975f0df7d6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "all_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-02204ffa7f75a4d48",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379360576423:route-table/rtb-02204ffa7f75a4d48",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-045f4fd838792db0a",
                "route_table_id": "rtb-02204ffa7f75a4d48",
                "subnet_id": "subnet-008045aa0d300c0aa"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-069d374821bfc8f80",
                "route_table_id": "rtb-02204ffa7f75a4d48",
                "subnet_id": "subnet-0523225c31e280b8c"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-02204ffa7f75a4d48",
            "owner_id": "379360576423",
            "route_table_id": "rtb-02204ffa7f75a4d48",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f951d379e44a1e3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "mutual-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        },
        {
          "index_key": "rtb-051d5ae3cf0e52a08",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379360576423:route-table/rtb-051d5ae3cf0e52a08",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0b599fbb10e03fafd",
                "route_table_id": "rtb-051d5ae3cf0e52a08",
                "subnet_id": "subnet-08d4e14e73f8ea9cd"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-063fc085559029238",
                "route_table_id": "rtb-051d5ae3cf0e52a08",
                "subnet_id": "subnet-00f67cd2ae9c35223"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-051d5ae3cf0e52a08",
            "owner_id": "379360576423",
            "route_table_id": "rtb-051d5ae3cf0e52a08",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035ecb01eda73f4d8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "mutual-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        },
        {
          "index_key": "rtb-0c04c436fb900b2f9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379360576423:route-table/rtb-0c04c436fb900b2f9",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0ab6dc3c739dcfbd1",
                "route_table_id": "rtb-0c04c436fb900b2f9",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0c04c436fb900b2f9",
            "owner_id": "379360576423",
            "route_table_id": "rtb-0c04c436fb900b2f9",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379360576423:vpc/vpc-0a57f6a9ed2bbbb3f",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c0a2c283cd3dc2c2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-04cedfdbecb0715fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a57f6a9ed2bbbb3f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c04c436fb900b2f9",
            "owner_id": "379360576423",
            "tags": {
              "Name": "mutual-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:loadbalancer/app/mutual-app-frontend-lb/2fb12fc38c2f9538",
            "arn_suffix": "app/mutual-app-frontend-lb/2fb12fc38c2f9538",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mutual-app-frontend-lb-805134955.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:loadbalancer/app/mutual-app-frontend-lb/2fb12fc38c2f9538",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mutual-app-frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b71b18cae98cf65f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f67cd2ae9c35223"
              },
              {
                "subnet_id": "subnet-08d4e14e73f8ea9cd"
              }
            ],
            "subnets": [
              "subnet-00f67cd2ae9c35223",
              "subnet-08d4e14e73f8ea9cd"
            ],
            "tags": {
              "Name": "mutual-app-frontend-lb"
            },
            "tags_all": {
              "Name": "mutual-app-frontend-lb"
            },
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_route_table.all_tables",
            "data.aws_route_tables.all",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:listener/app/mutual-app-frontend-lb/2fb12fc38c2f9538/f2116aa1a34db2d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:listener/app/mutual-app-frontend-lb/2fb12fc38c2f9538/f2116aa1a34db2d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:loadbalancer/app/mutual-app-frontend-lb/2fb12fc38c2f9538",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.lb",
            "data.aws_route_table.all_tables",
            "data.aws_route_tables.all",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:targetgroup/mutual-app-tg/b3d5f3ae61a6e6a3",
            "arn_suffix": "targetgroup/mutual-app-tg/b3d5f3ae61a6e6a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:379360576423:targetgroup/mutual-app-tg/b3d5f3ae61a6e6a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mutual-app-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mutual-app-tg"
            },
            "tags_all": {
              "Name": "mutual-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379360576423:security-group/sg-06e5b83bb05478414",
            "description": "Allow traffic from ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e5b83bb05478414",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b71b18cae98cf65f"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "mutual-app-frontend-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "379360576423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mutual-app-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "mutual-app-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:379360576423:security-group/sg-0b71b18cae98cf65f",
            "description": "Allow HTTP and HTTPS traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b71b18cae98cf65f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mutual-app-frontend-lb-sg",
            "name_prefix": "",
            "owner_id": "379360576423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mutual-app-lb-sg"
            },
            "tags_all": {
              "Name": "mutual-app-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57f6a9ed2bbbb3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}